Fixed overflow on x axis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,35 +3,35 @@
 @tailwind utilities;
 
 /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: #8a8a8a #ffffff;
-  }
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #8a8a8a #ffffff;
+}
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    height: 6px;
-    width: 6px;
-  }
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
 
-  *::-webkit-scrollbar-track {
-    background: transparent;
-  }
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
 
-  *::-webkit-scrollbar-thumb {
-    background-color: #8a8a8a;
-    border-radius: 10px;
-    border: 1px solid transparent;
-  }
+*::-webkit-scrollbar-thumb {
+  background-color: #8a8a8a;
+  border-radius: 10px;
+  border: 1px solid transparent;
+}
 
-  ::-webkit-scrollbar-corner {
-    background: transparent;
-  }
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 
 @layer base {
     html {
-        @apply m-0 p-0 scroll-smooth;
+        @apply m-0 p-0 scroll-smooth overflow-hidden overflow-y-auto;
     }
 
     body {
